hydroflow/tests/compile-fail/surface_dest_sink_badsink.stderr
error[E0277]: the trait bound `&str: hydroflow::futures::Sink<_>` is not satisfied
 --> tests/compile-fail/surface_dest_sink_badsink.rs:6:41
  |
6 |         source_iter(0..10) -> dest_sink(sink);
  |                               ----------^^^^-
  |                               |         |
  |                               |         the trait `hydroflow::futures::Sink<_>` is not implemented for `&str`
  |                               required by a bound introduced by this call
  |
  = help: the following other types implement trait `hydroflow::futures::Sink<Item>`:
            <&hydroflow::futures::futures_channel::mpsc::UnboundedSender<T> as hydroflow::futures::Sink<T>>
            <&mut S as hydroflow::futures::Sink<Item>>
            <Box<S> as hydroflow::futures::Sink<Item>>
            <BufferUnordered<S> as hydroflow::futures::Sink<Item>>
            <Buffered<S> as hydroflow::futures::Sink<Item>>
            <Fanout<Si1, Si2> as hydroflow::futures::Sink<Item>>
            <FlatMapUnordered<St, U, F> as hydroflow::futures::Sink<_Item>>
            <FlattenSink<Fut, Si> as hydroflow::futures::Sink<_Item>>
          and $N others
note: required by a bound in `sink_feed_flush`
 --> tests/compile-fail/surface_dest_sink_badsink.rs:5:18
  |
5 |       let mut df = hydroflow_syntax! {
  |  __________________^
6 | |         source_iter(0..10) -> dest_sink(sink);
7 | |     };
  | |_____^ required by this bound in `sink_feed_flush`
  = note: this error originates in the macro `hydroflow_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)
